add teamname and display formatted text of members

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,3 +1,4 @@
+<h2>{{$team.teamName}} Team Members: {{this.teamMemberDisplayText}}</h2>
 <ul>
   <h1>Pairs</h1>
   <li *ngFor="let pair of $team.pairs">
